added post patient medicines and diseases
